@@ -41,13 +41,6 @@ public class ScriptValuesMetaInjectionTest extends BaseMetadataInjectionTest<Scr
 
   @Test
   public void test() throws Exception {
-    /*
-        check( "COMPATIBILITY_MODE", new IBooleanGetter() {
-          public boolean get() {
-            return meta.isCompatible();
-          }
-        } );
-    */
     check("OPTIMIZATION_LEVEL", () -> meta.getOptimizationLevel());
     check("FIELD_NAME", () -> meta.getFieldname()[0]);
     check("FIELD_RENAME_TO", () -> meta.getRename()[0]);
@@ -79,13 +72,13 @@ public class ScriptValuesMetaInjectionTest extends BaseMetadataInjectionTest<Scr
     injector.setProperty(meta, "FIELD_LENGTH", setValue(new ValueMetaString("5"), "5"), "5");
     assertEquals(5, meta.getLength()[0]);
     injector.setProperty(
-        meta, "FIELD_LENGTH", setValue(new ValueMetaInteger("5"), new Long(5)), "5");
+        meta, "FIELD_LENGTH", setValue(new ValueMetaInteger("5"), Long.valueOf(5)), "5");
     assertEquals(5, meta.getLength()[0]);
     injector.setProperty(
         meta, "FIELD_LENGTH", setValue(new ValueMetaInteger("5"), (Long) null), "5");
     assertEquals(-1, meta.getLength()[0]);
     injector.setProperty(
-        meta, "FIELD_LENGTH", setValue(new ValueMetaNumber("5"), new Double(5)), "5");
+        meta, "FIELD_LENGTH", setValue(new ValueMetaNumber("5"), Double.valueOf(5)), "5");
     assertEquals(5, meta.getLength()[0]);
     injector.setProperty(
         meta, "FIELD_LENGTH", setValue(new ValueMetaInteger("5"), (Double) null), "5");
@@ -101,13 +94,13 @@ public class ScriptValuesMetaInjectionTest extends BaseMetadataInjectionTest<Scr
     injector.setProperty(meta, "FIELD_PRECISION", setValue(new ValueMetaString("5"), "5"), "5");
     assertEquals(5, meta.getPrecision()[0]);
     injector.setProperty(
-        meta, "FIELD_PRECISION", setValue(new ValueMetaInteger("5"), new Long(5)), "5");
+        meta, "FIELD_PRECISION", setValue(new ValueMetaInteger("5"), Long.valueOf(5)), "5");
     assertEquals(5, meta.getPrecision()[0]);
     injector.setProperty(
         meta, "FIELD_PRECISION", setValue(new ValueMetaInteger("5"), (Long) null), "5");
     assertEquals(-1, meta.getPrecision()[0]);
     injector.setProperty(
-        meta, "FIELD_PRECISION", setValue(new ValueMetaNumber("5"), new Double(5)), "5");
+        meta, "FIELD_PRECISION", setValue(new ValueMetaNumber("5"), Double.valueOf(5)), "5");
     assertEquals(5, meta.getPrecision()[0]);
     injector.setProperty(
         meta, "FIELD_PRECISION", setValue(new ValueMetaInteger("5"), (Double) null), "5");
